# GPGPU_with_OpenGL

./: CMakeLists.txt  README.md
GPGPU_with_OpenGL/: CMakeLists.txt  GPGPU_with_OpenGL.cpp  GPGPU_with_OpenGL.h  gpgpu.frag  gpgpu.vert  shader.cpp  shader.h
